cluster/manifests/embedding-retrieval/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: embedding-retrieval
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: embedding-retrieval
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
