cluster/manifests/embedding-retrieval/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: embedding-retrieval
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - embedding-retrieval.minikube.127.0.0.1.nip.io
        - embedding-retrieval.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
