cluster/manifests/embedding-retrieval/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: embedding-retrieval
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: embedding-retrieval
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - embedding-gateway/embedding-gateway.embedding-gateway.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
