cluster/manifests/embedding-retrieval/overlays/dev/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: embedding-retrieval
spec:
  gateways:
    - embedding-retrieval
  hosts:
    - embedding-retrieval.minikube.127.0.0.1.nip.io
  http:
    - route:
        - destination:
            host: embedding-retrieval
            port:
              number: 8080
